# scrap_real_time

./: .env  README.md  config.json  database.py  main.py  render.yaml  requirements.txt  scheduler.py  utils.py  wsgi.py
news_scraper_backend/: database.py  pyproject.toml  render.yaml  requirements.txt  test_scrape.py  utils.py  wsgi.py
news_scraper_backend/sources/: base_scraper.py  skysports.py  vnexpress.py
sources/: atp.py  atptour.py  base_scraper.py  cbs_sports.py  cbssports.py  cnbc.py  espn.py  goal.py  motorsport.py  nba.py  skysports.py  transfermarkt.py  vnexpress.py
