[tool.poetry]
name = "news-scraper"
version = "0.1.0"
description = "Real-time news scraper with scheduler"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.12.2"
requests = "2.31.0"
pymongo = "4.6.1"
python-dotenv = "1.0.0"
APScheduler = "3.10.4"
gunicorn = "21.2.0"
flask = "3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 